Fix display issue on small screens

--- a/console/stylesheets/application.css
+++ b/console/stylesheets/application.css
@@ -1,8 +1,3 @@
-body {
-  padding-bottom: 40px;
-  padding-top: 60px;
-}
-
 .helm-controls {
   text-align: center;
 }
